--- a/Frontend/admin-panel/src/App.css
+++ b/Frontend/admin-panel/src/App.css
@@ -71,3 +71,64 @@
   left: 0;
   width: 100%;
 }
+
+.main-content {
+  background: #fff;
+  width: 100%;
+  padding: 1rem;
+}
+
+.header-wrapper img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  background: #f5f6fa;
+  border-radius: 15px;
+  padding: 10px 2rem;
+  margin-bottom: 1rem;
+}
+
+.header-title {
+  color: #212529;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 1;
+}
+
+.search-box {
+  background: white;
+  border-radius: 15px;
+  color: #565757;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 4px 12px;
+  margin-right: 30px;
+}
+
+.search-box input {
+  background: transparent;
+  padding: 10px;
+}
+
+.search-box i {
+  font-size: 1.2rem;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+
+.search-box i:hover {
+  transform: scale(1.2);
+}
