--- a/Frontend/admin-panel/src/App.css
+++ b/Frontend/admin-panel/src/App.css
@@ -72,20 +72,20 @@
   width: 100%;
 }
 
-.main-content {
+.content-box {
   background: #fff;
   width: 100%;
   padding: 1rem;
 }
 
-.header-wrapper img {
+.content-wrapper img {
   width: 50px;
   height: 50px;
   cursor: pointer;
   border-radius: 50%;
 }
 
-.header-wrapper {
+.content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -93,7 +93,7 @@
   background: #f5f6fa;
   border-radius: 15px;
   padding: 10px 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 
 .header-title {
@@ -131,4 +131,9 @@
 
 .search-box i:hover {
   transform: scale(1.2);
+}
+
+.content {
+  height: 80vh;
+  position: sticky;
 }
