Create-Search-Screen

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -112,7 +112,7 @@ main {
 }
 
 /* sidebar */
-/* .navbar-brand {
+.navbar-brand {
   font-weight: bold;
 }
 .side-navbar {
@@ -132,4 +132,4 @@ main {
 }
 .active-nav {
   left: 0;
-} */
+}
